common-applications/test-environment/indextools-openlookeng-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-indextool
  name: openlookeng-indextool
