common-applications/test-environment/indextools-openlookeng-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: indextool-service
  namespace: openlookeng-indextool
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: httpport
  selector:
    app: indextoolinfo
  type: ClusterIP
